# ChangeLog for net-print/cups
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/net-print/cups/ChangeLog,v 1.436 2011/09/18 08:11:49 scarabeus Exp $

  18 Sep 2011; Tomáš Chvátal <scarabeus@gentoo.org> cups-1.5.0-r2.ebuild:
  cups 1.5 should handle the usb printing properly without any kernel hackery.

  03 Sep 2011; Raúl Porcel <armin76@gentoo.org> cups-1.4.8-r1.ebuild:
  alpha/arm/ia64/m68k/s390/sh/sparc stable wrt #380771

  29 Aug 2011; Jeroen Roovers <jer@gentoo.org> cups-1.4.8-r1.ebuild:
  Stable for HPPA (bug #380771).

*cups-1.5.0-r2 (28 Aug 2011)
*cups-1.4.8-r22 (28 Aug 2011)

  28 Aug 2011; Andreas K. Huettel <dilfridge@gentoo.org>
  +cups-1.4.8-r22.ebuild, +files/cups-1.4.8-largeimage.patch,
  +cups-1.5.0-r2.ebuild:
  Add upstream fix for bug 378597, mis-printing of large image files

  28 Aug 2011; Tony Vroon <chainsaw@gentoo.org> cups-1.4.8-r1.ebuild:
  Marked stable on AMD64 based on arch testing by Agostino "ago" Sarubbo &
  Tomáš "Mepho" Pružina in security bug #380771.

  27 Aug 2011; Kacper Kowalik <xarthisius@gentoo.org> cups-1.4.8-r1.ebuild:
  ppc/ppc64 stable wrt #380771

  27 Aug 2011; Pawel Hajdan jr <phajdan.jr@gentoo.org> cups-1.4.8-r1.ebuild:
  x86 stable wrt security bug #380771

  27 Aug 2011; Andreas K. Huettel <dilfridge@gentoo.org> cups-1.4.8-r1.ebuild,
  cups-1.4.8-r21.ebuild, -files/cups-1.4.8-CVE-2011-2896.patch,
  +files/cups-1.4.8-CVE-2011-3170.patch, cups-1.5.0-r1.ebuild:
  Dont die on kernel misconfiguration; correct CVE number, the patch fixes
  CVE-2011-3170

*cups-1.5.0-r1 (25 Aug 2011)
*cups-1.4.8-r21 (25 Aug 2011)
*cups-1.4.8-r1 (25 Aug 2011)

  25 Aug 2011; Timo Gurr <tgurr@gentoo.org> -cups-1.4.6-r21.ebuild,
  -cups-1.4.8.ebuild, +cups-1.4.8-r1.ebuild, +cups-1.4.8-r21.ebuild,
  +files/cups-1.4.8-CVE-2011-2896.patch, -cups-1.5.0.ebuild,
  +cups-1.5.0-r1.ebuild:
  Revbumps fixing security issue CVE-2011-2896. Remove old.

*cups-1.5.0 (17 Aug 2011)