@@ -1,5 +1,5 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA1
+Hash: SHA512
 
 AUX cups-1.3.0-configure.patch 651 RMD160 e4c7f45d7ddc28157433bf025c7f946c7e3b6d6a SHA1 101bf1893b56640d9fa82078e29319fbbd1449c7 SHA256 d6e5e60a982a3c093c0d0f89cf865e2b4c36290f5b1e188b7bf305d210070736
 AUX cups-1.3.10-str3178.patch 888 RMD160 ff061fc3500960f441c59896cdfe421d5f47f386 SHA1 fac5361b1172aba167d48988f874faa6faf1554a SHA256 e6550fad17017ac6897e6e9c70a4aafaaec5473c05a19e9e50277293cdc6aac6
@@ -26,29 +26,19 @@ DIST cups-1.3.11-source.tar.bz2 3799393 RMD160 a0646f2ba29fbd39d211ea5c3fdbd24a0
 DIST cups-1.4.6-source.tar.bz2 4517061 RMD160 94c9921e03f5ec52d9c16947435622365f53aef6 SHA1 42fb1ca00ee7291561564d3072716eb2045f05d1 SHA256 f08711702a77b52c7150f96fe1f45482f6151cb95ef601268c528607fe6ad514
 DIST cups-1.4.8-source.tar.bz2 4547162 RMD160 ee80e8d0b56dc0e2edf2a9aa9a43c4b92619f741 SHA1 9167f556e78e0bc075f1eb2f695d79cc1f334007 SHA256 6bd27e1213c139ed0bbadc5c29f97cf1e8f7f8f5b0bb29b227ecaff32aafa9a6
 DIST cups-1.5.0-source.tar.bz2 4090210 RMD160 e7be9b6b44428561609c59abaea8fa31a11aefff SHA1 628f549867751e373fc20c7558fec422f9eb942b SHA256 c6f99b68a558f4d626e9a5076d664f38e9925715dc541b07f0328c9aeb02ec33
-EBUILD cups-1.3.11-r4.ebuild 8157 RMD160 8a87f90b96c08a694643df5324e7daab651daed2 SHA1 f1f3d811c3bc989046cca5981a98d3a7e47e22fc SHA256 40fd91ccb98b69279919e10c46a286ae04b839ac77c0b074a8973f0313616d7b
-EBUILD cups-1.4.6-r2.ebuild 7232 RMD160 360accbab201dc540131622d6fc1dcf1df88d1e1 SHA1 ef0640f2bb2a846fc1435de4bb77eebfa82436f5 SHA256 c36d259463de77c8a6395eeb10571853702db0efc90ac4bfddd8144240462974
-EBUILD cups-1.4.8-r1.ebuild 7191 RMD160 ac9289e53242ce86d203c8783fa3df1c257b4f13 SHA1 49f4d3328aef32cb8c8cb021f0cb4bec6d36bf4d SHA256 04e843076c89c8d8581dfb30189921bc945f8328b8a544a6f2b2a9ae198fa86f
-EBUILD cups-1.4.8-r21.ebuild 8443 RMD160 679ccbc84e633feff758cf3475d09c9d05472457 SHA1 f26fc96e87bd0fb849a948f3ca57fb50056c8e43 SHA256 e0abc4a87def1cbe0cd5ab086984cfd46356bfc5d9427312cac4323a6c5a7635
-EBUILD cups-1.4.8-r22.ebuild 8494 RMD160 35528619a66960590cfdb86d332e3af986fce93c SHA1 94f8bc27c699780992b8817a28ac57d2f0da679e SHA256 bc9bf411685d6edd9aed5abb058e153bb1e94127be1063abcd5c0bd5bc725230
-EBUILD cups-1.5.0-r1.ebuild 8299 RMD160 cd482176e3cf5f29b09d8b35fa47450beae289c6 SHA1 c9bd7e12e6feb3dcf215c5b5c6c085c0f0825c8d SHA256 f2ed0e6c468f22b36f9fb0774fb0b4c6ed377246356ebc4385afa6b791170bd7
-EBUILD cups-1.5.0-r2.ebuild 6502 RMD160 42604b23709bd1d806ccfdd6bea3d7ebf8861e5c SHA1 4aa595c496ba975b4ebddccd7dcce3acc26f20b9 SHA256 2556d81d4273679ebb1f3187335cf2a1b8f6d7ce2e2bc285a8779a88a2695bfe
-MISC ChangeLog 65668 RMD160 0264a666e0c5e8d448bb1ce79ccd74f517d6a5ea SHA1 c7210f1e25be7a2d3908a538abb953af67495c24 SHA256 f941acbdf73e923fefb9bd0e866fc444726e92e94e164c900febe906eefd75df
+EBUILD cups-1.3.11-r4.ebuild 8156 RMD160 0dc0586773e1013e131958722659fa8e295a61ad SHA1 fbc26e25dfcaf4e2d60fc9c881620b315299446f SHA256 b47eba9e1374585f1fb27cf5ee7bb39dd2b937fefacb514312a2036e34b1104c
+EBUILD cups-1.4.6-r2.ebuild 7233 RMD160 d38eaef281327c19dfb4ae714c0719861c7f835f SHA1 53122b5426bf207a351f60cb8136444cc720aa6b SHA256 c47cc53f83fa35301bc823c5f8273e9a2200339a00b8216fbeae60145d39bbca
+EBUILD cups-1.4.8-r1.ebuild 7192 RMD160 43c67440f0b0b8770feec13af5ab051b5d2412e6 SHA1 9c27bcd87594fda8f828e95bae9b42760b2710a3 SHA256 c2561794a4711d8f58b46a9deed774f82bee57cb8f5a6ab341cfb116597de18b
+EBUILD cups-1.4.8-r21.ebuild 8442 RMD160 1d8c91e2145c2484f9324d15656320ee519273c0 SHA1 163ead6b0eb3301e5a71670974a11a35229b090c SHA256 aef663bb901775bbba44585dd50ecc6d31540685d4245e6430b7d4bc9dbb3309
+EBUILD cups-1.4.8-r22.ebuild 8493 RMD160 39b39b32ddc4bead92546180f11f377b9bdbca01 SHA1 6e5397d498b9ae8e66e74d9a1253b44ac79d77e1 SHA256 5eae14cd692f2639a69c518bbd381b04cc7fdfdca067c944bd90181212c5b387
+EBUILD cups-1.5.0-r1.ebuild 8298 RMD160 e3ac65ddbcabf3a2e1d9a9a5d77b9446cf90310d SHA1 cb2acd45a24faaae625febfd1224ecc8bb3e99d8 SHA256 4875c5607b541b3d34c257a145e2efcfc5806257aef1066e82f432b0f80afcba
+EBUILD cups-1.5.0-r2.ebuild 6501 RMD160 0137c7b531696e83d0ce536f0681321d6f9d4726 SHA1 46e87de85a2d705428ff75d2063cc274e48e753d SHA256 64bdb26eea84190d450f9d0228b46581b2024a9a9af4c061f96821bb9aec43f4
+MISC ChangeLog 65934 RMD160 f23150d7ee0fc8267ed4008320f25aacbd1009a4 SHA1 96f82c1208226a07557cf98f935538e4b6a907c1 SHA256 30fc0992534f37a825510f5c26d199ccdc23d1d277fc50535729ba86ac23bf22
 MISC metadata.xml 586 RMD160 73a1f1c0096d5035dfa53207b00c125894f6822a SHA1 123501263490cab57af2b99f2336fb70c094d9b0 SHA256 3b729c497ee38452b1ca051b759f43b5f9e117f9c36c0f3b660e4bd8ab7c295b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.18 (GNU/Linux)
 
-iQIcBAEBAgAGBQJOdaerAAoJEOSiRoyO7jvo+eIQAI2p1JFbAw+vrYaAVsVZb0Uv
-MYzovfLYWuPjYOuP2XQ+uxMustKV9qVNhC7lIlKt5tFqe4QXgdK/+MIuuzvBj1h8
-zsQB97Jry/v1hGv3tkjimDa+7NqXb1qhuM4IGfQauLCUUqnxY+x3W8YEEd8k5B4p
-aVfKd64odEbV45zVkrnFdFWiHC7CMVXMKNp32M2v7kxVtUdYWGeA7N9ikY+klPOv
-wOQgdwb4ccJFfuua2vOnw7EbU3E524qZXla5UiVt/Dm4QKCwGAG8guz55sXf8PUb
-JG64xM23UMTSpzHh8q7HLDKe4h4dMjdO7fF/j62S1llVpDDQYXwu/p4cfT++RzkS
-lbhbDGDICOluO8LO4xo+D6DXX9XNTehMZaRwx/orjTNtC/EjUHZppUeLbO1Vd4it
-I0ZS/tW3GtVdgXwUNjzA3woYxjApiM+sINFayVFSzIlHkRlOQIinfncth1BIIGxB
-HFeVHsUB5CQiPVGtLzDaGfacPggdwKrNmv210II8WTm8r75gEdUEv7I6b1z7gWz+
-lfr84Z9y+H++C60U6MDS2iTeXAGTp9MEl+tW4rYBLvyWi0SKxLRM8ZDHcKvDFRpR
-if5akjr+KFTNEmoY0DuqHfzWxnkScIdUzgFDvykFg7kHrThV1jI5xJG1EsNNkPQ6
-JcvdD58TwBwQQk2Z8iAo
-=8uS1
+iEYEAREKAAYFAk6/q+oACgkQgAnW8HDreRYy6ACgp8z6YNWuEcZOBADCv5LK8UB6
+SH8An0RgDhPD64iTf5qNFb3TmyT39jKX
+=O+W9
 -----END PGP SIGNATURE-----
